# probinf-lecture

./: .gitignore  .nojekyll  00-Overview.ipynb  01-Sampling.ipynb  02-MCMC.ipynb  Overview.md  README.md  _quarto.yml  index.html  lecture.html  lecture.qmd  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
exercises/: 01.qmd  02.qmd  03.qmd  04.qmd  05.qmd  06.qmd  _metadata.yml
lectures/: 01-Introduction.qmd  02-Direct-Sampling-Methods.qmd  03-Rejection-and-Importance-Sampling.qmd  04-Markov-Chain-Monte-Carlo.qmd  05-Metropolis-Hastings.qmd  06-Gibbs-Sampling.qmd  07-Hamiltonian-Monte-Carlo.qmd  08-HMC-2.qmd  08-HMC-Practical-Issues.qmd  09-Diagnostics.qmd  09-Practical-Issues.qmd  _metadata.yml
