[tool.poetry]
name = "probinf-lecture"
version = "1.0.0"
description = "Lecture notes for Inference in Probabilistic Models via Sampling Methods"
authors = ["Michael Habeck <michael.habeck@uni-jena.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
scipy = "^1.11.3"
jupyter = "^1.0.0"
ipython = "^8.16.1"
Cython = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
